--- a/sparkifydb_rs/create_cluster.ipynb
+++ b/sparkifydb_rs/create_cluster.ipynb
@@ -1,10 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### Run the notebook to:\n",
+    "\n",
+    "- To create a cluster and connect to it\n",
+    "- To obtain information on endpoint (host) and amazon resource name (arn)\n",
+    "- To delete cluster"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5226b41f-9e12-4b0c-906b-bb38617f85fd",
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -18,9 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "7631ca43-258e-41b7-bbee-c051fb95486f",
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Load DWH Params from a file\n",
@@ -45,9 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e0fb2f49-72ba-4557-b4e5-a4759a8eccd2",
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "# Create clients for IAM, EC2, S3 and Redshift\n",
@@ -85,11 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "c3c7ad02-0749-488d-b52c-68822c908548",
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
+    "# Create a role with administrative privileges in order to access S3\n",
     "def create_role(iam):\n",
     "    print(\"Creating role...\")\n",
     "    try:\n",
@@ -129,9 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "a23ced1b-d009-4295-8ef9-e6b76198793a",
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def delete_role(iam):\n",
@@ -145,9 +164,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "83f81c46-8cf9-40da-9549-9b65a152d760",
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "# Ensure global access to port\n",
+    "def _open_tcp_port(ec2, myClusterProps):\n",
+    "    try:\n",
+    "        vpc = ec2.Vpc(id=myClusterProps[\"VpcId\"])\n",
+    "        defaultSg = list(vpc.security_groups.all())[0]\n",
+    "        print(defaultSg)\n",
+    "        defaultSg.authorize_ingress(\n",
+    "            GroupName=defaultSg.group_name,\n",
+    "            CidrIp=\"0.0.0.0/0\",\n",
+    "            IpProtocol=\"TCP\",\n",
+    "            FromPort=int(DWH_PORT),\n",
+    "            ToPort=int(DWH_PORT),\n",
+    "        )\n",
+    "    except ClientError as e:\n",
+    "        code = e.response[\"Error\"][\"Code\"]\n",
+    "        print(code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def create_cluster(redshift, roleArn):\n",
@@ -186,9 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9dc4ac6d-da55-4690-9716-54f668e306d3",
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def delete_cluster(redshift):\n",
@@ -208,33 +255,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "41a04fba-c897-47bc-b612-c8abc79e61ff",
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
-    "def _open_tcp_port(ec2, myClusterProps):\n",
-    "    try:\n",
-    "        vpc = ec2.Vpc(id=myClusterProps[\"VpcId\"])\n",
-    "        defaultSg = list(vpc.security_groups.all())[0]\n",
-    "        print(defaultSg)\n",
-    "        defaultSg.authorize_ingress(\n",
-    "            GroupName=defaultSg.group_name,\n",
-    "            CidrIp=\"0.0.0.0/0\",\n",
-    "            IpProtocol=\"TCP\",\n",
-    "            FromPort=int(DWH_PORT),\n",
-    "            ToPort=int(DWH_PORT),\n",
-    "        )\n",
-    "    except ClientError as e:\n",
-    "        code = e.response[\"Error\"][\"Code\"]\n",
-    "        print(code)"
+    "def clean_up(iam, redshift):\n",
+    "    \n",
+    "    delete_role(iam)\n",
+    "    delete_cluster(redshift)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### Create cluster and connect to it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "239f380c-dea8-4a60-ae26-93415b70a58c",
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def connect_cluster():\n",
@@ -242,7 +289,8 @@
     "    ec2, s3, iam, redshift = create_clients()\n",
     "    if iam.get_role(RoleName=DWH_IAM_ROLE_NAME):\n",
     "        delete_role(iam)\n",
-    "    roleArn = create_role(iam)\n",
+    "    else:\n",
+    "        roleArn = create_role(iam)\n",
     "\n",
     "    myClusterProps = create_cluster(redshift, roleArn)\n",
     "    DWH_ENDPOINT = myClusterProps[\"Endpoint\"][\"Address\"]\n",
@@ -259,28 +307,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "5329f463-5fa1-48f7-9fc6-96f10c460508",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_up(iam, redshift):\n",
-    "    \n",
-    "    delete_role(iam)\n",
-    "    delete_cluster(redshift)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "95470beb-22ce-4f6c-bd3c-456c36cde01a",
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deleting role...\n",
       "Creating role...\n",
       "1.1 Creating a new IAM Role\n",
       "1.2 Attaching Policy\n",
@@ -298,41 +333,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "452527eb-652d-4734-ad9e-87a52ca8bb24",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
    "source": [
-    "# Copy the above endpoint and role values into the DWH_HOST and ARN fields, respectively in the dfw.cfg file"
+    "##### Copy the above endpoint and role values into the DWH_HOST and ARN fields, respectively in the dfw.cfg file\n",
+    "\n",
+    "[DWH] \n",
+    "DWH_HOST=\n",
+    "\n",
+    "[IAM_ROLE]\n",
+    "ARN="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true
+   },
+   "source": [
+    "### Clean up: Delete cluster and role\n",
+    "\n",
+    "Uncomment line below to delete role and cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "7cf5f8da-1800-4df4-b42d-c0179e2c0fd9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deleting role...\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'delete_cluster' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/w_/1mhqn8v154z22vzbmn1wjyh00000gn/T/ipykernel_43285/601439680.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Uncomment line below to delete role and cluster\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mclean_up\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miam\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mredshift\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/w_/1mhqn8v154z22vzbmn1wjyh00000gn/T/ipykernel_43285/1670742709.py\u001b[0m in \u001b[0;36mclean_up\u001b[0;34m(iam, redshift)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mdelete_role\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miam\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mdelete_cluster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mredshift\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'delete_cluster' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 20,
+   "metadata": {
+    "editable": true
+   },
+   "outputs": [],
    "source": [
     "# Uncomment line below to delete role and cluster\n",
     "\n",
@@ -342,15 +374,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2652585d-3131-4d3c-953d-824f6e4fd38f",
-   "metadata": {},
+   "metadata": {
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -364,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
